{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 63,
  "lineage": "18b61e4a-c17c-5607-8bbd-91829b6abc53",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b8b44ec9a8f90422",
            "arn": "arn:aws:ec2:us-east-2:730335538072:instance/i-02d22d67bdc2045f0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d22d67bdc2045f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Master-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-018305197905ffa7a",
            "private_dns": "ip-192-168-1-148.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.148",
            "public_ip": "18.191.239.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d780647be4ea3f18",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-055992d2a90cc8b3b",
            "tags": {
              "Name": "WebApp"
            },
            "tags_all": {
              "Name": "WebApp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1a246da816b0497"
            ]
          },
          "dependencies": [
            "aws_security_group.WebServer",
            "aws_subnet.PublicAZA",
            "aws_vpc.mainvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335538072:internet-gateway/igw-04284fb1e30b132e4",
            "id": "igw-04284fb1e30b132e4",
            "owner_id": "730335538072",
            "tags": {
              "Name": "IGW-MainVPC-Ohio"
            },
            "tags_all": {
              "Name": "IGW-MainVPC-Ohio"
            },
            "vpc_id": "vpc-0e9f91d3c06420367"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335538072:route-table/rtb-0d6b435d72a6be74d",
            "id": "rtb-0d6b435d72a6be74d",
            "owner_id": "730335538072",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private"
            },
            "tags_all": {
              "Name": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9f91d3c06420367"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335538072:route-table/rtb-0111c5d585e32ef94",
            "id": "rtb-0111c5d585e32ef94",
            "owner_id": "730335538072",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04284fb1e30b132e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9f91d3c06420367"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateAZA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d8742fdf7e85576",
            "route_table_id": "rtb-0d6b435d72a6be74d",
            "subnet_id": "subnet-0679ee87369d99fdf"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.PrivateAZA",
            "aws_vpc.mainvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicAZA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e594b7baabfac074",
            "route_table_id": "rtb-0111c5d585e32ef94",
            "subnet_id": "subnet-055992d2a90cc8b3b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.PublicAZA",
            "aws_vpc.mainvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335538072:security-group/sg-0d1a246da816b0497",
            "description": "ONLY HTTP CONNECTION INBOUD",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1a246da816b0497",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServer",
            "name_prefix": "",
            "owner_id": "730335538072",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebServer-SG"
            },
            "tags_all": {
              "Name": "WebServer-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9f91d3c06420367"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateAZA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335538072:subnet/subnet-0679ee87369d99fdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0679ee87369d99fdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335538072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2a-PrivateSubnet"
            },
            "tags_all": {
              "Name": "2a-PrivateSubnet"
            },
            "vpc_id": "vpc-0e9f91d3c06420367"
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicAZA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335538072:subnet/subnet-055992d2a90cc8b3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055992d2a90cc8b3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335538072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2a-PublicSubnet"
            },
            "tags_all": {
              "Name": "2a-PublicSubnet"
            },
            "vpc_id": "vpc-0e9f91d3c06420367"
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335538072:vpc/vpc-0e9f91d3c06420367",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0dc1d8de1115646d8",
            "default_route_table_id": "rtb-06a1d4e4ba51f4352",
            "default_security_group_id": "sg-06927d1f28f75bc41",
            "dhcp_options_id": "dopt-07670d3d0f2faf9b0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e9f91d3c06420367",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a1d4e4ba51f4352",
            "owner_id": "730335538072",
            "tags": {
              "Name": "MainVPC-Ohio"
            },
            "tags_all": {
              "Name": "MainVPC-Ohio"
            }
          }
        }
      ]
    }
  ]
}